tests/NormalTests/paczka1/fuzzy1/61220181.err
Error in line 2: i5PvTnu A921 93,8
Error in line 12: qhdUQzAiEe A921 56,4
Error in line 8: SUaQf0d71L A921 37,9
Error in line 35: SUaQf0d71L A114 116,3
